Add webpack support

--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,9 @@
 
 service: serverless-side-rendering
 
+plugins:
+  - serverless-webpack
+
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
 # frameworkVersion: "=X.X.X"
@@ -53,7 +56,7 @@ region: eu-central-1
 #  exclude:
 #    - exclude-me.js
 #    - exclude-me-dir/**
-
+#
 functions:
   hello:
     handler: handler.hello
@@ -61,7 +64,7 @@ functions:
       - http:
           path: ping
           method: get
-
+          integration: lambda
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
