Trying out serverless chrome

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "serverless-plugin-chrome": "^1.0.0-11",
     "serverless-webpack": "^2.2.2",
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "chrome-remote-interface": "^0.24.4"
   }
 }
