--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,7 @@
 service: serverless-side-rendering
 
 plugins:
+  - serverless-plugin-chrome
   - serverless-webpack
 
 # You can pin your service to only deploy with a specific Serverless version
@@ -58,11 +59,11 @@ region: eu-central-1
 #    - exclude-me-dir/**
 #
 functions:
-  hello:
-    handler: handler.hello
+  render:
+    handler: handler.render
     events:
       - http:
-          path: ping
+          path: render
           method: get
           integration: lambda
 #    The following are a few example events you can configure
