--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/handler.js",
   "scripts": {
-    "build": "babel src --out-dir dist",
+    "build": "rimraf dist; babel src --out-dir dist",
     "deploy": "npm run build; serverless deploy"
   },
   "repository": {
