Specify utf-8 as encoding

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,5 +19,5 @@ functions:
           integration: lambda
           response:
             headers:
-              Content-Type: "'text/html'"
+              Content-Type: "'text/html; charset=utf-8'"
             template: $input.path('$')
